# rustodoro

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: app.rs  main.rs  store.rs  ui.rs
